# cecetype

./: Cargo.toml  README.md
.cargo/: config.toml
cecetype-macros/: Cargo.toml  README.md
cecetype-macros/src/: attrs.rs  lib.rs
dimly-macros/: Cargo.toml
dimly-macros/src/: lib.rs
minicbor-schema-derive/: Cargo.toml
minicbor-schema-derive/src/: expand.rs  lib.rs
minicbor-schema-derive/src/parse/: container.rs  field.rs  mod.rs  variant.rs
schema-macros/: Cargo.toml
schema-macros/src/: attrs.rs  lib.rs  serde_attrs.rs
src/: flavors.rs  lib.rs  parse.rs  schema.rs  type_schema.rs  utils.rs  value.rs
src/flavors/: borrowed.rs  owned.rs
src/parse/cli/: help.rs  lexer.rs  mod.rs  spec.rs  word.rs
src/schema/: primitive_impls.rs  visitors.rs
src/schema/primitive_impls/: alloc_impls.rs  heapless_impls.rs  std_impls.rs
src/schema/visitors/: array.rs  enum.rs  map.rs  slice.rs  struct.rs  tuple.rs
src/type_schema/: enum.rs  flavor.rs  primitive_impls.rs  struct.rs  visitors.rs
src/type_schema/primitive_impls/: alloc_impls.rs  heapless_impls.rs  std_impls.rs
src/type_schema/visitors/: array.rs  enum.rs  map.rs  slice.rs  struct.rs  tuple.rs
tests/: cli_help.rs  cli_parser.rs  decode_errors.rs  ref_resolution.rs  roundtrip.rs  schema_attrs.rs  value_decoding.rs
tests/common/: mod.rs  protocols.rs
