[package]
name = "cecetype"
version = "0.0.0"
edition = "2024"

[workspace]
members = ["cecetype-macros"]

[features]
default = ["alloc", "std", "heapless"]
alloc = ["serde/alloc"]
std = ["alloc", "serde/std"]
heapless = ["dep:heapless", "dep:hash32"]

[dependencies]
hash32 = { version = "0.3", default-features = false, optional = true }
heapless = { version = "0.9.2", default-features = false, features = [
    "serde",
], optional = true }
cecetype-macros = { path = "cecetype-macros" }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
derive-where = { version = "1.6.1", default-features = false }

[dev-dependencies]
postcard = { version = "1.1.3", features = ["use-std"] }
ron = "0.12.0"
rmp-serde = "1.3.1"
rstest = "0.26.1"
serde_cbor = "0.11.2"
serde_json = "1.0.149"
yaml_serde = "0.10.4"
