[package]
name = "cecetype"
version = "0.0.0"
edition = "2024"

[workspace]
members = ["cecetype-macros"]

[features]
default = ["derive", "alloc", "cli"]
derive = []
alloc = ["serde/alloc"]
std = ["alloc", "serde/std"]
heapless = ["dep:heapless"]
cli = []
miette = ["std", "cli", "dep:miette"]
miette-fancy = ["miette", "miette/fancy-no-syscall"]

[dependencies]
cecetype-macros = { path = "cecetype-macros" }
derive-where = { version = "1.6.1", default-features = false }
heapless = { version = "0.9.3", default-features = false, features = [
    "serde",
], optional = true }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.18", default-features = false }
miette = { version = "7.6.0", default-features = false, optional = true }

[dev-dependencies]
postcard = { version = "1.1.3", features = ["use-std"] }
rmp-serde = "1.3.1"
ron = "0.12.1"
rstest = "0.26.1"
serde_cbor = "0.11.2"
serde_json = "1.0.149"
yaml_serde = "0.10.4"
